--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <main>
         <label>
             Converter <b>de</b>
-            <select>
-                <option> R$ Real brasileiro </option>
+            <select class="currency-converter">
+                <option value="real">R$ Real brasileiro </option>
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="euro">€ Euro </option>
+                <option value="libra">£ Libra</option>
             </select>
         </label>
 
@@ -23,21 +26,22 @@
                 <option value="dolar">US$ Dólar americano</option>
                 <option value="euro">€ Euro </option>
                 <option value="libra">£ Libra</option>
+                <option value="real">R$ Real brasileiro </option>
                 <option value="bitcoin">₿ Bitcoin</option>
             </select>
         </label>
 
-        <label for="">
+        <label>
             Valor
             <input class="input-currency" type="number" placeholder="R$ 10.000,00" autofocus>
         </label>
 
-        <button class="convert-button">Converter</button>
+        <button class="convert-button" >Converter</button>
 
         <section>
             <div class="currency-box">
-                <img src="assets/real.png" alt="logo-real">
-                <p class="currency">Real brasileiro</p>
+                <img class="currency-img-to-convert" src="assets/real.png" alt="logo-real" >
+                <p class="currency" id="currency">Real brasileiro</p>
                 <p class="currency-value-to-convert">R$ 0</p>
             </div>
 
