modificando aparencia do site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="logo" src="assets/logo.gif" alt="logo-convert">
+    <img class="logo" src="assets/money.gif" alt="logo-convert">
 
     <main>
         <label>
@@ -45,7 +45,7 @@
                 <p class="currency-value-to-convert">R$ 0</p>
             </div>
 
-            <img src="assets/arrow.png" alt="logo-arrow" class="arrow-img">
+            <img src="assets/seta-gif.gif" alt="logo-arrow" class="arrow-img">
 
             <div class="currency-box">
                 <img class="currency-img" src="assets/dolar.png" alt="logo-moeda-convertida">
